--- a/src/main/res/layout/note_activity.xml
+++ b/src/main/res/layout/note_activity.xml
@@ -25,12 +25,13 @@
             android:layout_weight="1">
 
         <ListView
-                android:id="@+id/lvNotes"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_above="@+id/svControls"
-                android:divider="@color/Gray"
-                android:dividerHeight="2dp"/>
+            android:id="@+id/lvNotes"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/svControls"
+            android:divider="@drawable/tbl_border"
+            android:dividerHeight="3dp"
+            android:layout_margin="4dp"/>
 
         <ScrollView
                 android:id="@+id/svControls"
