--- a/src/main/res/layout/note_item.xml
+++ b/src/main/res/layout/note_item.xml
@@ -14,14 +14,14 @@
     android:orientation="horizontal"
     android:background="@drawable/listview_background"
     android:layout_width="match_parent"
-    android:layout_height="20dp"
+    android:layout_height="28dp"
+    android:padding="4dp"
     android:weightSum="10">
 
     <android.support.v7.widget.AppCompatImageView
         app:srcCompat="@drawable/ic_note_black_24dp"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_margin="2dp"/>
+        android:layout_height="match_parent"/>
 
     <TextView
         android:id="@+id/lblNoteTitle"
@@ -29,6 +29,7 @@
         android:layout_width="0dp"
         android:layout_height="20dp"
         android:textStyle="bold"
+        android:textSize="15sp"
         android:layout_gravity="start"
         android:gravity="start|center"/>
 
@@ -38,7 +39,7 @@
         android:layout_width="0dp"
         android:layout_height="20dp"
         android:layout_margin="8dp"
-        android:textSize="12sp"
+        android:textSize="15sp"
         android:layout_gravity="center"
         android:gravity="center"/>
 
