--- a/src/main/res/layout/api_activity.xml
+++ b/src/main/res/layout/api_activity.xml
@@ -8,27 +8,171 @@
   ~ of the License, or (at your option) any later version.
   -->
 
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="de.domjos.schooltools.activities.ApiActivity">
 
-    <android.support.design.widget.AppBarLayout
+    <ScrollView
+            android:id="@+id/scrollPanel"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@drawable/bg_water">
+        <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <LinearLayout
+                    android:id="@+id/apiRow"
+                    android:layout_alignParentTop="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/tbl_border"
+                    android:weightSum="10">
+
+                <TextView
+                        android:id="@+id/lblApiChoice"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="4"
+                        android:background="@drawable/tbl_border"
+                        android:padding="4dp"
+                        android:text="@string/api_choice" />
+                <Spinner
+                        android:id="@+id/spApiChoice"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="6"
+                        android:entries="@array/api_choice"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:id="@+id/typeRow"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/tbl_border"
+                    android:weightSum="10"
+                    android:layout_below="@+id/apiRow">
+                <TextView
+                        android:id="@+id/lblApiType"
+                        android:text="@string/api_type"
+                        android:background="@drawable/tbl_border"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="4"
+                        android:padding="4dp"/>
+                <Spinner
+                        android:id="@+id/spApiType"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="6"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:id="@+id/entryTypeRow"
+                    android:layout_below="@+id/typeRow"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/tbl_border"
+                    android:weightSum="10">
+                <TextView
+                        android:id="@+id/lblApiEntryType"
+                        android:text="@string/api_type_entry_type"
+                        android:background="@drawable/tbl_border"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="4"
+                        android:padding="4dp"/>
+                <Spinner
+                        android:id="@+id/spApiEntryType"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:entries="@array/api_entry_type"
+                        android:layout_weight="6"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:id="@+id/entryRow"
+                    android:layout_below="@+id/entryTypeRow"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/tbl_border"
+                    android:weightSum="10">
+                <TextView
+                        android:id="@+id/lblApiEntry"
+                        android:text="@string/api_type_entry"
+                        android:background="@drawable/tbl_border"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="4"
+                        android:padding="4dp"/>
+                <Spinner
+                        android:id="@+id/spApiEntry"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="6" />
+            </LinearLayout>
+            <LinearLayout
+                    android:id="@+id/formatRow"
+                    android:layout_below="@+id/entryRow"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/tbl_border"
+                    android:weightSum="10">
+                <TextView
+                        android:id="@+id/lblApiFormat"
+                        android:text="@string/api_format"
+                        android:background="@drawable/tbl_border"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="4"
+                        android:padding="4dp"/>
+                <Spinner
+                        android:id="@+id/spApiFormat"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="6"/>
+            </LinearLayout>
+
+            <RelativeLayout
+                    android:id="@+id/pnlPath"
+                    android:layout_below="@+id/formatRow"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/tbl_border">
+                <TextView
+                        android:id="@+id/lblApiPath"
+                        android:text="@string/api_path_choose_"
+                        android:padding="4dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_toStartOf="@+id/cmdApiPath"
+                        android:layout_toLeftOf="@+id/cmdApiPath"/>
+                <TextView
+                        android:id="@+id/lblApiPathContent"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_toStartOf="@+id/cmdApiPath"
+                        android:layout_toLeftOf="@+id/cmdApiPath"
+                        android:layout_below="@+id/lblApiPath"/>
+
+                <Button
+                        android:id="@+id/cmdApiPath"
+                        android:text="@string/api_path_choose"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"/>
+            </RelativeLayout>
+        </RelativeLayout>
+    </ScrollView>
+
+    <ImageButton
+        android:id="@+id/cmdApiSave"
+        android:contentDescription="@string/sys_save"
+        android:src="@android:drawable/ic_menu_save"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/tbl_border"/>
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </android.support.design.widget.AppBarLayout>
-
-    <include layout="@layout/api_content" />
-
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
