add help to modules

--- a/src/main/res/layout/help_activity.xml
+++ b/src/main/res/layout/help_activity.xml
@@ -47,7 +47,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <WebView
+        <TextView
             android:id="@+id/lblContent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
