--- a/src/main/res/layout/learning_card_group_entry_activity.xml
+++ b/src/main/res/layout/learning_card_group_entry_activity.xml
@@ -15,8 +15,7 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activities.LearningCardGroupEntryActivity"
-        android:background="@drawable/bg_water">
+        tools:context=".activities.LearningCardGroupEntryActivity">
 
 
     <TabHost
