--- a/src/main/res/layout/api_activity.xml
+++ b/src/main/res/layout/api_activity.xml
@@ -18,8 +18,7 @@
     <ScrollView
             android:id="@+id/scrollPanel"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="@drawable/bg_water">
+            android:layout_height="match_parent">
         <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
