--- a/src/main/res/layout/marklist_extended_activity.xml
+++ b/src/main/res/layout/marklist_extended_activity.xml
@@ -22,8 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/pnlStatus"
-        android:layout_margin="2dp"
-        android:background="@drawable/bg_water"/>
+        android:layout_margin="2dp"/>
 
 
     <LinearLayout
