--- a/src/main/res/layout/timetable_teacher_activity.xml
+++ b/src/main/res/layout/timetable_teacher_activity.xml
@@ -15,8 +15,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="de.domjos.schooltools.activities.TimeTableTeacherActivity"
-    android:background="@drawable/bg_water">
+    tools:context="de.domjos.schooltools.activities.TimeTableTeacherActivity">
 
     <RelativeLayout
         android:id="@+id/content"
