add documentation for setting

--- a/src/main/res/values/help.xml
+++ b/src/main/res/values/help.xml
@@ -72,6 +72,10 @@
                     SchoolTools blendet im Handy Notifikationen für aktuelle Ereignisse wie Klassenarbeiten ein.
                 </p>
                 <p>
+                    Eigenes Hintergrundbild:<br>
+                    App-Hintergrundbild durch eigenes Bild ersetzen!
+                </p>
+                <p>
                     Neuigkeiten erneut anzeigen:<br>
                     Zeigt den Neuigkeiten-Bildschirm erneut an.<br>
                     Beim ersten Start der App wird ein Neuigkeiten-Bildschirm angezeigt.
