--- a/src/main/res/layout/marklist_activity.xml
+++ b/src/main/res/layout/marklist_activity.xml
@@ -26,13 +26,14 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay">
-            <ImageButton
+
+            <android.support.v7.widget.SearchView
                 android:id="@+id/cmdSearch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_search_black_24dp"
-                android:background="@color/colorPrimary"
-                android:layout_gravity="end"/>
+                android:layout_gravity="end"
+                android:layout_margin="3dp">
+            </android.support.v7.widget.SearchView>
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
