--- a/src/main/res/layout/marklist_content.xml
+++ b/src/main/res/layout/marklist_content.xml
@@ -117,10 +117,12 @@
                         android:layout_weight="4"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:padding="4dp"/>
+                        android:padding="4dp"
+                        android:gravity="center_vertical"/>
                     <EditText
                         android:id="@+id/txtMarkListMaxPoints"
                         android:hint="@string/marklist_maxPoints"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
                         android:layout_weight="6"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
@@ -160,20 +162,18 @@
                         android:layout_height="match_parent"/>
                 </RadioGroup>
                 <TableRow  android:weightSum="10">
-                    <LinearLayout
-                        android:weightSum="10"
-                        android:orientation="horizontal">
-                        <CheckBox
-                            android:id="@+id/chkMarkListSimpleHalfPoints"
-                            android:text="@string/marklist_points_half"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"/>
-                        <CheckBox
-                            android:id="@+id/chkMarkListSimpleDictatMode"
-                            android:text="@string/marklist_dictatMode"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"/>
-                    </LinearLayout>
+                    <CheckBox
+                        android:id="@+id/chkMarkListSimpleHalfPoints"
+                        android:text="@string/marklist_points_half"
+                        android:layout_weight="5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"/>
+                    <CheckBox
+                        android:id="@+id/chkMarkListSimpleDictatMode"
+                        android:text="@string/marklist_dictatMode"
+                        android:layout_weight="5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"/>
                 </TableRow>
             </TableLayout>
 
