--- a/src/main/res/layout/main_content.xml
+++ b/src/main/res/layout/main_content.xml
@@ -418,9 +418,42 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/llTaggedBookMarks"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/llSavedMarklist">
+                android:layout_below="@+id/llSavedMarklist"
+                android:layout_margin="8dp"
+                android:background="@drawable/tbl_border">
+                <TextView
+                    android:id="@+id/lblTaggedBookMarks"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:text="@string/main_taggedBookMarks"
+                    android:padding="8dp"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    android:gravity="center"
+                    android:layout_gravity="center"/>
+                <MultiAutoCompleteTextView
+                    android:id="@+id/txtTaggedBookMarksTags"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/lblTaggedBookMarks"
+                    android:hint="@string/bookmark_tags"/>
+                <ListView
+                    android:id="@+id/lvTaggedBookMarks"
+                    android:layout_below="@+id/txtTaggedBookMarksTags"
+                    android:layout_width="match_parent"
+                    android:layout_height="120dp"
+                    android:layout_margin="8dp"
+                    tools:ignore="NestedScrolling" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/llTaggedBookMarks">
 
                 <TableLayout
                     android:id="@+id/tblButtons"
@@ -597,6 +630,30 @@
                                 android:layout_height="30dp"
                                 android:gravity="center"
                                 android:layout_gravity="center"/>
+                    </TableRow>
+                    <TableRow
+                        android:id="@+id/trBookMarks"
+                        android:layout_width="match_parent"
+                        android:background="@drawable/tbl_border"
+                        android:layout_height="20dp"
+                        android:orientation="vertical"
+                        android:weightSum="10"
+                        android:layout_marginBottom="4dp">
+                        <ImageView
+                            app:srcCompat="@drawable/ic_bookmark_black_24dp"
+                            android:layout_weight="1"
+                            android:layout_width="0dp"
+                            android:layout_height="30dp"
+                            android:scaleType="fitCenter"
+                            android:padding="4dp"
+                            android:contentDescription="@string/app_name"/>
+                        <TextView
+                            android:text="@string/main_nav_bookmarks"
+                            android:layout_weight="9"
+                            android:layout_width="0dp"
+                            android:layout_height="30dp"
+                            android:gravity="center"
+                            android:layout_gravity="center"/>
                     </TableRow>
                     <TableRow
                         android:id="@+id/trExport"
