--- a/src/main/res/xml/provider_paths.xml
+++ b/src/main/res/xml/provider_paths.xml
@@ -11,4 +11,5 @@
 <paths>
     <cache-path name="cache" path="/" />
     <files-path name="files" path="/" />
+    <external-path name="external_files" path="."/>
 </paths>
