update the project

--- a/src/main/res/layout/learning_card_group_entry_activity.xml
+++ b/src/main/res/layout/learning_card_group_entry_activity.xml
@@ -152,7 +152,7 @@
                                     android:layout_height="wrap_content"
                                     android:hint="@string/learningCard_question"
                                     android:inputType="textMultiLine"/>
-                            <EditText
+                            <AutoCompleteTextView
                                     android:id="@+id/txtLearningCardAnswer"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
