--- a/src/main/res/layout/bookmark_widget.xml
+++ b/src/main/res/layout/bookmark_widget.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/timetable_border"
+    android:background="@drawable/tbl_border"
     android:padding="@dimen/widget_margin">
     <TextView
         android:layout_width="match_parent"
