--- a/src/main/res/layout/bookmark_widget.xml
+++ b/src/main/res/layout/bookmark_widget.xml
@@ -1,28 +1,33 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/tbl_border"
-    android:padding="@dimen/widget_margin">
-    <TextView
+    android:background="@drawable/bg_water"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="match_parent"
+            android:id="@+id/widgetTitleLabel"
+            android:text="@string/main_nav_bookmarks"
+            android:textColor="@color/White"
+            android:background="@drawable/timetable_border"
+            android:textSize="18sp"
+            android:gravity="center"
+            android:textAllCaps="true"
+            android:layout_height="30dp"/>
+    </FrameLayout>
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:height="30dp"
-        android:id="@+id/lblHeader"
-        android:scrollbars="horizontal"
-        android:marqueeRepeatLimit ="marquee_forever"
-        android:focusableInTouchMode="true"
-        android:scrollHorizontally="true"
-        android:ellipsize="marquee"
-        android:padding="0.5dp"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        android:text="@string/main_importantToDos"/>
-    <ListView
-        android:id="@+id/lvBookmarks"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/lblHeader"
-        android:dividerHeight="0.2dp"
-        android:padding="0.5dp"
-        android:layout_margin="0.5dp"/>
-</RelativeLayout>
+        android:padding="2dp">
+        <ListView
+            android:id="@+id/widgetListView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:dividerHeight="1dp"
+            android:divider="@color/SlateGray"
+            tools:listitem="@layout/bookmark_widget_item"/>
+    </LinearLayout>
+</LinearLayout>
