--- a/src/main/res/layout/learning_card_query_activity.xml
+++ b/src/main/res/layout/learning_card_query_activity.xml
@@ -180,6 +180,27 @@
                         android:layout_weight="4"
                         android:text="@string/learningCard_query_showNotesImmediately"/>
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:weightSum="10"
+                    android:layout_margin="4dp">
+                    <CheckBox
+                        android:id="@+id/chkLearningCardQueryRandom"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="3"
+                        android:text="@string/learningCard_query_random"/>
+                    <EditText
+                        android:id="@+id/txtLearningCardQueryRandomNumber"
+                        android:hint="@string/learningCard_query_randomNumber"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="7"
+                        android:inputType="numberSigned"
+                        android:visibility="gone"/>
+                </LinearLayout>
             </LinearLayout>
         </ScrollView>
     </RelativeLayout>
