--- a/src/main/res/layout/timetable_activity.xml
+++ b/src/main/res/layout/timetable_activity.xml
@@ -23,13 +23,26 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <ListView
-            android:id="@+id/lvTimeTable"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="3dp"
-            android:divider="@color/Gray"
-            android:dividerHeight="2dp"/>
+            android:orientation="vertical">
+            <ListView
+                android:id="@+id/lvTimeTable"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="3dp"
+                android:divider="@color/Gray"
+                android:dividerHeight="2dp"
+                android:layout_above="@+id/cmdTimeTableAssistant"/>
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/cmdTimeTableAssistant"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_assistant_black_24dp"
+                android:layout_alignParentBottom="true"/>
+        </RelativeLayout>
+
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/cmdTimeTableAdd"
