--- a/src/main/res/layout/timetable_assistant_dialog.xml
+++ b/src/main/res/layout/timetable_assistant_dialog.xml
@@ -36,7 +36,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="10"
                 android:inputType="text"
-                android:hint="@string/sys_title"/>
+                android:hint="@string/sys_title"
+                android:nextFocusForward="@+id/txtTimeTableAssistantTimeTableYear"/>
         </TableRow>
 
         <TableRow
@@ -52,47 +53,74 @@
 
         <TableRow
             android:tag="step2">
-            <TimePicker
-                android:id="@+id/tpTimeTableAssistantTimesStart"
-                android:layout_weight="5"
+            <ListView
+                android:id="@+id/lvTimeTableAssistantTimes"
+                android:layout_weight="10"
                 android:layout_width="0dp"
-                android:layout_height="100dp"/>
-            <TimePicker
-                android:id="@+id/tpTimeTableAssistantTimesEnd"
-                android:layout_weight="5"
-                android:layout_width="0dp"
-                android:layout_height="100dp"/>
+                android:layout_height="150dp"
+                android:layout_margin="2dp"
+                android:divider="@color/Black"
+                android:dividerHeight="1dp"/>
         </TableRow>
 
         <TableRow
             android:tag="step2">
-            <androidx.appcompat.widget.AppCompatImageButton
-                android:id="@+id/cmdTimeTableAssistantTimesBack"
+            <EditText
+                android:id="@+id/txtTimeTableAssistantTimesStart"
+                android:hint="@string/timetable_assistant_start"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:inputType="time"/>
+            <EditText
+                android:id="@+id/txtTimeTableAssistantTimesEnd"
+                android:hint="@string/timetable_assistant_end"
+                android:layout_weight="3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:inputType="time"/>
+            <CheckBox
+                android:id="@+id/chkTimeTableAssistantTimesBreak"
+                android:hint="@string/timetable_assistant_break"
+                android:layout_weight="3"
+                android:layout_height="wrap_content"
+                android:layout_width="0dp"/>
+        </TableRow>
+
+        <TableRow
+            android:tag="step2">
+            <Button
+                android:id="@+id/cmdTimeTableAssistantTimesAdd"
+                android:text="@string/timetable_assistant_add"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="5"
-                app:srcCompat="@drawable/ic_arrow_back_black_24dp"
-                android:contentDescription="@string/learningCard_assistant_back" />
-            <androidx.appcompat.widget.AppCompatImageButton
-                android:id="@+id/cmdTimeTableAssistantTimesForward"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="5"
-                app:srcCompat="@drawable/ic_arrow_forward_black_24dp"
+                android:layout_weight="10"
                 android:contentDescription="@string/learningCard_assistant_forward" />
         </TableRow>
 
         <TableRow
             android:tag="step3">
+            <ListView
+                android:id="@+id/lvTimeTableAssistantSubjects"
+                android:layout_weight="10"
+                android:layout_width="0dp"
+                android:layout_height="150dp"
+                android:layout_margin="2dp"
+                android:divider="@color/Black"
+                android:dividerHeight="1dp"/>
+        </TableRow>
+
+        <TableRow
+            android:tag="step3">
             <EditText
-                android:id="@+id/txtTimeTableAssistantSubjectTitle"
+                android:id="@+id/txtTimeTableAssistantSubjectsTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
                 android:hint="@string/sys_title"
                 android:layout_weight="8"/>
             <EditText
-                android:id="@+id/txtTimeTableAssistantSubjectAlias"
+                android:id="@+id/txtTimeTableAssistantSubjectsAlias"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
@@ -103,31 +131,34 @@
         <TableRow
             android:tag="step3">
             <Spinner
-                android:id="@+id/txtTimeTableAssistantSubjectColor"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:id="@+id/spTimeTableAssistantSubjectsColor"
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:layout_weight="10"
                 android:inputType="text"
                 android:hint="@string/timetable_color"/>
         </TableRow>
 
         <TableRow
             android:tag="step3">
-            <androidx.appcompat.widget.AppCompatImageButton
-                android:id="@+id/cmdTimeTableAssistantSubjectBack"
+            <Button
+                android:id="@+id/cmdTimeTableAssistantSubjectsAdd"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="5"
-                app:srcCompat="@drawable/ic_arrow_back_black_24dp"
-                android:contentDescription="@string/learningCard_assistant_back" />
-            <androidx.appcompat.widget.AppCompatImageButton
-                android:id="@+id/cmdTimeTableAssistantSujectForward"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="5"
-                app:srcCompat="@drawable/ic_arrow_forward_black_24dp"
-                android:contentDescription="@string/learningCard_assistant_forward" />
+                android:layout_height="wrap_content"
+                android:layout_weight="10"
+                android:text="@string/timetable_assistant_add"
+                android:contentDescription="@string/timetable_assistant_add" />
         </TableRow>
 
+        <TableRow
+            android:tag="step4">
+            <TableLayout
+                android:id="@+id/tblTimeTableAssistantTimeTable"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="10"
+                android:weightSum="6"/>
+        </TableRow>
     </TableLayout>
 
     <LinearLayout
