--- a/src/main/res/layout/timetable_activity.xml
+++ b/src/main/res/layout/timetable_activity.xml
@@ -11,6 +11,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -27,11 +28,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <ListView
+            <de.domjos.schooltools.custom.SwipeRefreshDeleteList
                 android:id="@+id/lvTimeTable"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="3dp"
+                custom:itemIcon="@drawable/ic_access_time_black_24dp"
                 android:divider="@color/Gray"
                 android:dividerHeight="2dp"
                 android:layout_above="@+id/cmdTimeTableAssistant"/>
