--- a/src/main/res/layout/help_activity.xml
+++ b/src/main/res/layout/help_activity.xml
@@ -51,7 +51,8 @@
             android:id="@+id/lblContent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"/>
+            android:padding="@dimen/text_margin"
+            android:background="@drawable/item_background"/>
 
     </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
