--- a/src/main/res/layout/list_item.xml
+++ b/src/main/res/layout/list_item.xml
@@ -21,16 +21,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/item_background"
     android:layout_width="match_parent"
-    android:layout_height="44dp"
-    android:padding="2dp"
-    android:layout_margin="2dp">
+    android:layout_height="44dp">
 
     <ImageView
         android:id="@+id/ivIcon"
         android:contentDescription="@string/app_name"
-        android:layout_width="40dp"
+        android:layout_width="36dp"
         android:layout_height="match_parent"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@mipmap/ic_launcher_round"
+        android:layout_margin="4dp"/>
 
     <TextView
         android:id="@+id/lblTitle"
@@ -41,6 +40,7 @@
         android:textSize="16sp"
         android:layout_marginLeft="5dp"
         android:layout_marginStart="5dp"
+        android:layout_marginTop="2dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:singleLine="true"
