--- a/src/main/res/layout/timer_activity.xml
+++ b/src/main/res/layout/timer_activity.xml
@@ -83,14 +83,12 @@
                     android:layout_weight="2"/>
             </LinearLayout>
 
-            <ListView
+            <de.domjos.schooltools.custom.SwipeRefreshDeleteList
                 android:id="@+id/lvTimerEvents"
                 android:layout_below="@+id/pnlChoice"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="4dp"
-                android:divider="@color/Gray"
-                android:dividerHeight="2dp"/>
+                app:itemIcon="@drawable/ic_date_range_black_24dp"/>
         </RelativeLayout>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
